hphp/test/zend/good/each_003.php
<?php

$a = array(array());
$a[] =& $a;

var_dump(each($a[1]));

?>