hphp/test/zend/bad/zend/offset_object.php
<?php

$object = new stdClass;
var_dump($object[1]);

?>